Terraform/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-service
  namespace: microservices
  labels:
    app: microservices-app
spec:
  selector:
    app: microservices-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
